objects/LAT_ContractDetails__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marca</label>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipLabel>Detalhamentos</relationshipLabel>
        <relationshipName>Detalhamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <label>Número do contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipLabel>Detalhamento</relationshipLabel>
        <relationshipName>Detalhamentos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Detalhamento</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>ID Detalhamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalhamentos</pluralLabel>
    <recordTypes>
        <fullName>FestasEventosQuantidade</fullName>
        <active>true</active>
        <label>Festas - Eventos - Quantidade.</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_FestasEventosQuantidade</fullName>
        <active>true</active>
        <label>Festas - Eventos - Quantidade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_TailorMadeQuantidade</fullName>
        <active>true</active>
        <label>Tailor Made - Quantidade</label>
    </recordTypes>
    <recordTypes>
        <fullName>TailorMadeQuantidade</fullName>
        <active>true</active>
        <label>Tailor Made - Quantidade.</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>